--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             >Function declarations</a
           >
         </li>
-        <li><a class="nav-link" href="#Reference">Reference</a></li>
+        <li>
+          <a class="nav-link" href="#Reference">Reference</a>
+        </li>
       </ul>
     </nav>
     <main id="main-doc">
